ramen-rose-5> Correct main heading in home page alignment
ramen-rose-5> Correct main heading in home page alignment

--- a/css/style.css
+++ b/css/style.css
@@ -66,9 +66,11 @@ html {
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
+}
+.heading-2,
+.heading-3{
     text-align: center;
 }
-
 /*--------------------------------------------------------*/
 /*------------------------HEADER--------------------------*/
 /*--------------------------------------------------------*/
